Change New Color BG

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome Page</title>
     <style>
         body {
-            background-color: hotpink;
+            background-color: teal;
             color: #fff9;
             font-family: sans-serif;
         }
