Folder Wireframe created

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
             align-items: center;
             min-height: 100vh;
         }
+        a:is(:link, :visited) {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
     <main>
         <h1>ID: 2770672</h1>
         <h2>Técnico en Desarrrollo de Software</h2>
+        <a href="01-Wireframe/index.html">01 - Wireframe HIFI & Prototype</a>
     </main>
 </body>
 </html>
