Improve index & new menu

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
         body {
-            background-color: teal;
-            color: #fff9;
-            font-family: sans-serif;
+            background-color: #ffffff;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='88' y1='88' x2='0' y2='0'%3E%3Cstop offset='0' stop-color='%2300787a'/%3E%3Cstop offset='1' stop-color='%2300bdbd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='75' y1='76' x2='168' y2='160'%3E%3Cstop offset='0' stop-color='%23868686'/%3E%3Cstop offset='0.09' stop-color='%23ababab'/%3E%3Cstop offset='0.18' stop-color='%23c4c4c4'/%3E%3Cstop offset='0.31' stop-color='%23d7d7d7'/%3E%3Cstop offset='0.44' stop-color='%23e5e5e5'/%3E%3Cstop offset='0.59' stop-color='%23f1f1f1'/%3E%3Cstop offset='0.75' stop-color='%23f9f9f9'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3Cfilter id='c' x='0' y='0' width='200%25' height='200%25'%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='12' /%3E%3C/filter%3E%3C/defs%3E%3Cpolygon fill='url(%23a)' points='0 174 0 0 174 0'/%3E%3Cpath fill='%23000' fill-opacity='.5' filter='url(%23c)' d='M121.8 174C59.2 153.1 0 174 0 174s63.5-73.8 87-94c24.4-20.9 87-80 87-80S107.9 104.4 121.8 174z'/%3E%3Cpath fill='url(%23b)' d='M142.7 142.7C59.2 142.7 0 174 0 174s42-66.3 74.9-99.3S174 0 174 0S142.7 62.6 142.7 142.7z'/%3E%3C/svg%3E");
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-position: top left;
+            color: #008080;
+            font-family: Poppins, sans-serif;
         }
         main {
             display: flex;
@@ -17,8 +22,60 @@
             align-items: center;
             min-height: 100vh;
         }
-        a:is(:link, :visited) {
+        h1 {
+            font-size: 4rem;
+            font-weight: 400;
+            margin: 0;
+        }
+        h2 {
+            font-size: 1.6rem;
+            font-weight: 300;
+            margin: 0;
+        }
+        menu {
+            padding: 0;
+        }
+        menu ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            margin-top: 2rem;
+            padding: 0;
+            gap: 1rem;
+        }
+        menu ul li {
+            border-radius: 4rem;
+            background-color: #fff;
+            border: 2px solid #008080;
+            padding: 0.5rem;
+            width: 280px;
+            transition: all 0.5s;
+        }
+        menu ul li a span {
+            background-color: #008080;
+            border-radius: 2rem;
             color: #fff;
+            padding: 10px;
+            text-align: center;
+            width: 24px;
+        }
+        menu ul li a:is(:link, :visited) {
+            display: flex;   
+            align-items: center;
+            gap: 1rem;
+            text-decoration: none;
+            color: #008080;
+        }
+        menu ul li:is(:hover) {
+            background-color: #008080;
+            border: 2px solid #fff;
+        }
+        menu ul li:is(:hover) a {
+            color: #fff;
+        }
+        menu ul li:is(:hover) a span {
+            background-color: #fff;
+            color: #008080;
         }
     </style>
 </head>
@@ -26,7 +83,22 @@
     <main>
         <h1>ID: 2770672</h1>
         <h2>Técnico en Desarrrollo de Software</h2>
-        <a href="01-Wireframe/index.html">01 - Wireframe HIFI & Prototype</a>
+        <menu>
+            <ul>
+                <li>
+                    <a href="01-UI/01-wireframe.html" target="_blank"> <span>01</span> Wireframe HIFI</a>
+                </li>
+                <li>
+                    <a href="01-UI/02-prototype.html" target="_blank"> <span>02</span> Prototype</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"> <span>03</span> Style Guide</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"> <span>04</span> Mockup (Design)</a>
+                </li>
+            </ul>
+        </menu>
     </main>
 </body>
 </html>
