New Style Guide

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <a href="01-UI/02-prototype.html" target="_blank"> <span>02</span> Prototype</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"> <span>03</span> Style Guide</a>
+                    <a href="01-UI/03-styleguide.html" target="_blank"> <span>03</span> Style Guide</a>
                 </li>
                 <li>
                     <a href="#" target="_blank"> <span>04</span> Mockup (Design)</a>
