Mockup page added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <a href="01-UI/03-styleguide.html" target="_blank"> <span>03</span> Style Guide</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"> <span>04</span> Mockup (Design)</a>
+                    <a href="01-UI/04-mockup.html" target="_blank"> <span>04</span> Mockup (Design)</a>
                 </li>
             </ul>
         </menu>
