--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                 <li>
                     <a href="01-UI/04-mockup.html" target="_blank"> <span>04</span> Mockup (Design)</a>
                 </li>
+                <li>
+                    <a href="01-UI/05-layout.html" target="_blank"> <span>05</span> Layout (html/css)</a>
+                </li>
             </ul>
         </menu>
     </main>
