--- a/01-UI/html/register.html
+++ b/01-UI/html/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="../css/master.css">
 </head>
 <body>
@@ -11,15 +11,17 @@
         <header>
             <img src="../images/logo.svg" alt="Logo">
         </header>
-        <section class="login">
+        <section class="register">
             <menu>
-                <a href="#">Login</a>
-                <a href="register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="#">Register</a>
             </menu>
             <form action="dashboard.html" method="post">
+                <input type="text" name="name" placeholder="Full Name" required>
+                <input type="number" name="phone" placeholder="Phone Number" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <button type="submit">Login</button>
+                <button type="submit">Register</button>
             </form>
         </section>
     </main>
