feat: new files to pdo example crud

--- a/01-UI/html/adoptions/index.html
+++ b/01-UI/html/adoptions/index.html
@@ -44,7 +44,7 @@
                         <a href="show.html">View</a>
                     </footer>
                 </article>
-                <article>
+                <article class="bgcolor">
                     <header>
                         <img src="../../images/ico-pet.svg" alt="Pet">
                         <p>
@@ -56,7 +56,7 @@
                         <a href="show.html">View</a>
                     </footer>
                 </article>
-                <article>
+                <article class="bgcolor">
                     <header>
                         <img src="../../images/ico-pet.svg" alt="Pet">
                         <p>
