--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
         <menu>
             <ul>
                 <li>
-                    <a href="01-UI/01-wireframe.html" target="_blank"> <span>01</span> Wireframe HIFI</a>
+                    <a href="01-ui/01-wireframe.html" target="_blank"> <span>01</span> Wireframe HIFI</a>
                 </li>
                 <li>
-                    <a href="01-UI/02-prototype.html" target="_blank"> <span>02</span> Prototype</a>
+                    <a href="01-ui/02-prototype.html" target="_blank"> <span>02</span> Prototype</a>
                 </li>
                 <li>
-                    <a href="01-UI/03-styleguide.html" target="_blank"> <span>03</span> Style Guide</a>
+                    <a href="01-ui/03-styleguide.html" target="_blank"> <span>03</span> Style Guide</a>
                 </li>
                 <li>
-                    <a href="01-UI/04-mockup.html" target="_blank"> <span>04</span> Mockup (Design)</a>
+                    <a href="01-ui/04-mockup.html" target="_blank"> <span>04</span> Mockup (Design)</a>
                 </li>
                 <li>
-                    <a href="01-UI/05-layout.html" target="_blank"> <span>05</span> Layout (html/css)</a>
+                    <a href="01-ui/05-layout.html" target="_blank"> <span>05</span> Layout (html/css)</a>
                 </li>
                 <li>
-                    <a href="01-UI/05-layout.html" target="_blank"> <span>06</span> CRUD (pdo)</a>
+                    <a href="02-pdo/index.php" target="_blank"> <span>06</span> CRUD (pdo)</a>
                 </li>
             </ul>
         </menu>
