--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 <li>
                     <a href="02-pdo/index.php" target="_blank"> <span>06</span> CRUD (pdo)</a>
                 </li>
+                <li>
+                    <a href="03-sessions/index.php" target="_blank"> <span>07</span> Login (sessions)</a>
+                </li>
             </ul>
         </menu>
     </main>
