--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     <a href="01-ui/05-layout.html" target="_blank"> <span>05</span> Layout (html/css)</a>
                 </li>
                 <li>
-                    <a href="02-pdo/index.php" target="_blank"> <span>06</span> CRUD (pdo)</a>
+                    <a href="02-pdo/index.php" target="_blank"> <span>06</span> CRUD (PDO)</a>
                 </li>
                 <li>
-                    <a href="03-sessions/index.php" target="_blank"> <span>07</span> Login (sessions)</a>
+                    <a href="03-sessions/index.php" target="_blank"> <span>07</span> Login (Rols & Sessions)</a>
                 </li>
             </ul>
         </menu>
