--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                 <li>
                     <a href="03-sessions/index.php" target="_blank"> <span>07</span> Login (Rols & Sessions)</a>
                 </li>
+                <li>
+                    <a href="04-laravel/index.html" target="_blank"> <span>08</span> Laravel </a>
+                </li>
             </ul>
         </menu>
     </main>
